ALS-1641: Move styles from psama to picsure, fix header visibility

--- a/biodatacatalyst-ui/src/main/webapp/picsureui/overrides/styles.css
+++ b/biodatacatalyst-ui/src/main/webapp/picsureui/overrides/styles.css
@@ -9,6 +9,11 @@
   padding-top: 10px;
 }
 
+.login-logo {
+    width: 50%;
+    padding-top: 20px;
+}
+
 /* take out footer padding */
 #footer-content {
     padding-top: 0;
@@ -54,3 +59,28 @@
      border-bottom-color: #6d6e70;
 }
 
+#header-content {
+    width: 100%;
+    min-height: unset;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.fence-login-btn {
+    display: block;
+    padding: 5px;
+    background-color: #d0d0d0;
+    width: auto;
+    margin: auto auto;
+}
+
+.fence-login-wrapper {
+    margin: auto auto;
+    text-align: center;
+    display: inline-block;
+}
+
+.fence-inner-span {
+    left: -60px;
+    position: relative;
+}
